# neoradar-vacdm

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  TODO  vcpkg.json
.github/workflows/: build-develop.yml  ci.yml  release.yml
release/: NeoVACDM.plugin
sdk/: Aircraft.h
src/: NeoVACDM.cpp  NeoVACDM.h  Version.h.in  main.cpp  vACDM.cpp
src/config/: ConfigParser.cpp  ConfigParser.h  PluginConfig.h  lists.yaml
src/core/: CompileCommands.h  DataManager.cpp  DataManager.h  NeoVACDMCommandProvider.cpp  NeoVACDMCommandProvider.h  Server.cpp  Server.h  TagFunctions.h  TagItems - Copy.h  TagItems.h  TagItemsColor.h
src/log/: Logger.cpp  Logger.h  SpdLogger.cpp  SpdLogger.h
src/types/: Ecfmp.h  Pilot.h
src/utils/: Date.h  String.h
